# lab2-akios

./: .gitignore  CMakeLists.txt  main.cpp  main.h
Colors/: Colors.cpp  Colors.h
Config/: Config.cpp  Config.h
Grid/: Grid.cpp  Grid.h
WindowsProcedures/: WindowProc.cpp  WindowProc.h
